Updated site to be more about LudiPics

--- a/client/src/app/about.tpl.html
+++ b/client/src/app/about.tpl.html
@@ -42,8 +42,8 @@
     </div>
     <div class="col-sm-6 special">
         <div class="page-header">
-            <h1>Prestige Worldwide</h1>
+            <h1>LudiPics</h1>
         </div>
-        <p class="lead">The first name in entertainment.</p><i class="fa fa-volume-up super-awesome"></i>
+        <p class="lead">A New Adventure Everyday</p><i class="fa fa-volume-up super-awesome"></i>
     </div>
 </div>
