--- a/client/src/app/contact.tpl.html
+++ b/client/src/app/contact.tpl.html
@@ -26,7 +26,6 @@
     </div>
     <div class="col-sm-6 special">
         <div class="page-header"><h1>Contact Us</h1></div>
-        <p class="lead">Freddy can't wait to hear from you.</p><i class="fa fa-reply-all super-awesome"></i>
-        <address>1428 Elm Street &bull; San Francisco, CA 94122</address>
+        <p class="lead">We can't wait to hear from you.</p><i class="fa fa-reply-all super-awesome"></i>
     </div>
 </div>
