--- a/client/src/app/header.tpl.html
+++ b/client/src/app/header.tpl.html
@@ -4,7 +4,7 @@
         <div class="navbar-header">
             <a href="/" class="navbar-brand">
                 <img src="/img/logo-symbol-64x64.png" class="navbar-logo">
-                <span class="navbar-brand-label">Angular Drywall</span>
+                <span class="navbar-brand-label">LudiPics</span>
             </a>
             <button class="navbar-toggle btn navbar-btn" ng-init="menuCollapsed = true" ng-click="menuCollapsed = !menuCollapsed">
                 <span class="icon-bar"></span>
@@ -33,7 +33,7 @@
         <div class="navbar-header">
             <a href="/admin/" class="navbar-brand-admin">
                 <img src="/img/logo-symbol-64x64.png" class="navbar-logo">
-                <span class="navbar-brand-label">Angular Drywall</span>
+                <span class="navbar-brand-label">LudiPics</span>
             </a>
             <button class="navbar-toggle btn navbar-btn" ng-click="toggleAdminMenu()">
                 <span class="icon-bar"></span>
