--- a/client/src/app/main.tpl.html
+++ b/client/src/app/main.tpl.html
@@ -1,7 +1,7 @@
 <div class="jumbotron">
-    <h1>Success</h1>
+    <h1>LudiPics</h1>
 
-    <p class="lead">Your Node.js website and user system is running. May the force be with you.
+    <p class="lead">A New Adventure Everyday
 
     <div class="btn-group" role="group">
         <a type="button" class="btn btn-primary btn-lg" href="/signup"><i class="fa fa-user-plus"></i><span class="hidden-xs"> Sign Up</span></a>
@@ -14,8 +14,7 @@
         <div class="panel panel-default">
             <div class="panel-body"><h3>About Us</h3>
 
-                <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium
-                    voluptatum deleniti atque corrupti.</p>
+                <p>Meet the team</p>
                 <a href="/about" class="btn btn-default btn-block">Learn More</a>
             </div>
         </div>
@@ -24,8 +23,7 @@
         <div class="panel panel-default">
             <div class="panel-body"><h3>Sign Up</h3>
 
-                <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium
-                    voluptatum deleniti atque corrupti.</p>
+                <p>Start using LudiPics today</p>
                 <a href="/signup" class="btn btn-default btn-block">Learn More</a>
             </div>
         </div>
@@ -34,8 +32,7 @@
         <div class="panel panel-default">
             <div class="panel-body"><h3>Contact Us</h3>
 
-                <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium
-                    voluptatum deleniti atque corrupti.</p>
+                <p>Let us know what you think</p>
                 <a href="/contact" class="btn btn-default btn-block">Learn More</a>
             </div>
         </div>
