Added ludiCategory admin support. I figure this evens out my work/commit ratio a bit.

--- a/client/src/app/admin/admin.tpl.html
+++ b/client/src/app/admin/admin.tpl.html
@@ -36,6 +36,12 @@
             </div>
             <div class="col-sm-4">
                 <div class="well stat">
+                    <div class="stat-value" ng-bind="pivoted.ludiCategories"></div>
+                    <div class="stat-label">LudiCategories</div>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="well stat">
                     <div class="stat-value" ng-bind="pivoted.statuses"></div>
                     <div class="stat-label">Statuses</div>
                 </div>
