--- a/client/src/assets/sass/page/_admin.scss
+++ b/client/src/assets/sass/page/_admin.scss
@@ -139,3 +139,20 @@
     }
   }
 }
+
+#admin-statuses-index, #admin-ludiCategories-index{
+  @extend #admin-accounts-index;
+  .input-group{
+    input {
+      width: 100px !important;
+
+      @media screen and (min-width: $grid-float-breakpoint){
+        width: 160px !important;
+      }
+    }
+
+    input:nth-child(2){
+      border-left: none;
+    }
+  }
+}
