Added Daily area to admin site

--- a/client/src/app/header.tpl.html
+++ b/client/src/app/header.tpl.html
@@ -50,6 +50,7 @@
                         <li><a href="/admin/statuses" ng-click="closeAdminMenu()">Statuses</a></li>
                         <li><a href="/admin/categories" ng-click="closeAdminMenu()">Categories</a></li>
                         <li><a href="/admin/ludiCategories" ng-click="closeAdminMenu()">LudiCategories</a></li>
+                        <li><a href="/admin/dailies" ng-click="closeAdminMenu()">Dailies</a></li>
                         <li class="divider"></li>
                         <li class="dropdown-header">User Admin</li>
                         <li><a href="/admin/users" ng-click="closeAdminMenu()">Users</a></li>
