--- a/client/src/app/admin/admin.tpl.html
+++ b/client/src/app/admin/admin.tpl.html
@@ -24,26 +24,14 @@
         <div class="row">
             <div class="col-sm-4">
                 <div class="well stat">
-                    <div class="stat-value" ng-bind="user.groups"></div>
-                    <div class="stat-label">Groups</div>
-                </div>
-            </div>
-            <div class="col-sm-4">
-                <div class="well stat">
-                    <div class="stat-value" ng-bind="pivoted.categories"></div>
-                    <div class="stat-label">Categories</div>
-                </div>
-            </div>
-            <div class="col-sm-4">
-                <div class="well stat">
                     <div class="stat-value" ng-bind="pivoted.ludiCategories"></div>
                     <div class="stat-label">LudiCategories</div>
                 </div>
             </div>
             <div class="col-sm-4">
                 <div class="well stat">
-                    <div class="stat-value" ng-bind="pivoted.statuses"></div>
-                    <div class="stat-label">Statuses</div>
+                    <div class="stat-value" ng-bind="pivoted.dailies"></div>
+                    <div class="stat-label">Dailies</div>
                 </div>
             </div>
         </div>
