Added stats on posts and ludiGroups to the admin dashbord (but not firther editing yet)

--- a/client/src/app/admin/admin.tpl.html
+++ b/client/src/app/admin/admin.tpl.html
@@ -34,6 +34,20 @@
                     <div class="stat-label">Dailies</div>
                 </div>
             </div>
+            <div class="col-sm-4">
+                <div class="well stat">
+                    <div class="stat-value" ng-bind="user.posts"></div>
+                    <div class="stat-label">Posts</div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-4">
+                <div class="well stat">
+                    <div class="stat-value" ng-bind="user.ludiGroups"></div>
+                    <div class="stat-label">LudiGroups</div>
+                </div>
+            </div>
         </div>
     </div>
     <div class="col-sm-6 special">
