--- a/client/src/app/admin/dailies/admin-daily.tpl.html
+++ b/client/src/app/admin/dailies/admin-daily.tpl.html
@@ -1,14 +1,14 @@
 <div class="row">
     <div class="col-xs-12">
         <div class="page-header">
-            <h1><a href="/admin/dailies">Dailies</a> / {{daily.date}}</h1>
+            <h1><a href="/admin/dailies">Dailies</a> / {{daily.date | date:'yyyy-MM-dd'}}</h1>
         </div>
         <form name="detailForm"><fieldset>
             <legend>Details</legend>
             <alert ng-repeat="alert in detailAlerts" type="{{alert.type}}" close="closeDetailAlert($index)">{{alert.msg}}</alert>
             <div class="form-group" ng-class="{'has-error': hasError(detailForm.date)}">
                 <label class="control-label" for="date">Date:</label>
-                <input type="text" name="date" id="date" class="form-control" ng-model="daily.date" required>
+                <input type="text" name="date" id="date" class="form-control" ng-model="daily.date | date:'yyyy-MM-dd'" required>
                 <span class="help-block" ng-show="showError(detailForm.date, 'required')">This field is required</span>
             </div>
             <div class="form-group" ng-class="{'has-error': hasError(detailForm.ludiCategories)}">
