Listing out LudiCategories on Daily page

--- a/client/src/app/admin/dailies/admin-daily.tpl.html
+++ b/client/src/app/admin/dailies/admin-daily.tpl.html
@@ -8,10 +8,10 @@
             <alert ng-repeat="alert in detailAlerts" type="{{alert.type}}" close="closeDetailAlert($index)">{{alert.msg}}</alert>
             <div class="form-group" ng-class="{'has-error': hasError(detailForm.date)}">
                 <label class="control-label" for="date">Date:</label>
-                <input type="text" name="date" id="date" class="form-control" ng-model="daily.date | date:'yyyy-MM-dd'" required>
+                <input type="text" name="date" id="date" class="form-control" ng-model="daily.date" required>
                 <span class="help-block" ng-show="showError(detailForm.date, 'required')">This field is required</span>
             </div>
-            <div class="form-group" ng-class="{'has-error': hasError(detailForm.ludiCategories)}">
+            <div class="form-group">
                 <label class="control-label" for="ludiCategories">LudiCategories:</label>
                 <ul ng-repeat="ludiCategory in daily.ludiCategories">
                     <!-- This will be editable someday soon -->
@@ -35,5 +35,10 @@
                 <button type="button" class="btn btn-danger btn-delete" ng-click="deleteDaily()">Delete</button>
             </div>
         </fieldset></form>
+        <ul>
+            <li ng-repeat="ludiCategory in ludiCategories">
+                {{ ludiCategory.name }}
+            </li>
+        </ul>
     </div>
 </div>
