Little QoL fix adding links to ludiCategories showing up on daily admin page

--- a/client/src/app/admin/dailies/admin-dailies.tpl.html
+++ b/client/src/app/admin/dailies/admin-dailies.tpl.html
@@ -45,7 +45,7 @@
                 <td ng-bind="daily.date | date:'yyyy-MM-dd'"></td>
                 <td>
                     <span ng-repeat="ludiCategory in daily.ludiCategories">
-                        {{ ludiCategory.name }}<span ng-if="!$last">, </span>
+                        <a ng-href="/admin/ludiCategories/{{ludiCategory._id}}">{{ ludiCategory.name }}</a><span ng-if="!$last">, </span>
                     </span>
                 </td>
                 <td class="nowrap" ng-bind="daily._id"></td>
