Made it clear which settings are actually useful.

--- a/client/src/app/header.tpl.html
+++ b/client/src/app/header.tpl.html
@@ -46,11 +46,9 @@
                 <li class="dropdown" dropdown is-open="status.isopen">
                     <a href="#" class="dropdown-toggle navbar-dropdown-admin" dropdown-toggle>System&nbsp;<span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li class="dropdown-header">Pivoted Settings</li>
-                        <li><a href="/admin/statuses" ng-click="closeAdminMenu()">Statuses</a></li>
-                        <li><a href="/admin/categories" ng-click="closeAdminMenu()">Categories</a></li>
-                        <li><a href="/admin/ludiCategories" ng-click="closeAdminMenu()">LudiCategories</a></li>
+                        <li class="dropdown-header">LudiPics Settings</li>
                         <li><a href="/admin/dailies" ng-click="closeAdminMenu()">Dailies</a></li>
+                        <li><a href="/admin/ludiCategories" ng-click="closeAdminMenu()">LudiCategories</a></li>
                         <li class="divider"></li>
                         <li class="dropdown-header">User Admin</li>
                         <li><a href="/admin/users" ng-click="closeAdminMenu()">Users</a></li>
