--- a/client/src/app/admin/ludiCategories/admin-ludiCategory.tpl.html
+++ b/client/src/app/admin/ludiCategories/admin-ludiCategory.tpl.html
@@ -16,6 +16,11 @@
                 <input type="text" name="description" id="description" class="form-control" ng-model="ludiCategory.description" required>
                 <span class="help-block" ng-show="showError(detailForm.description, 'required')">This field is required</span>
             </div>
+            <div class="form-group" ng-class="{'has-error': hasError(detailForm.color)}">
+                <label class="control-label" for="color">Color:</label>
+                <input type="text" name="color" id="color" class="form-control" ng-model="ludiCategory.color" required>
+                <span class="help-block" ng-show="showError(detailForm.color, 'required')">This field is required</span>
+            </div>
             <div class="form-group">
                 <button type="button" class="btn btn-primary" ng-disabled="!canSave(detailForm)" ng-click="update()">Update</button>
             </div>
