--- a/client/src/assets/sass/page/_admin.scss
+++ b/client/src/assets/sass/page/_admin.scss
@@ -156,7 +156,11 @@
     }
   }
 }
-.LCimage{
+.lcImage{
     max-height: 270px;
     max-width: 270px;
+}
+.lcThumb{
+    max-height: 40px;
+    max-width: 40px;
 }
