--- a/client/src/app/admin/ludiCategories/admin-ludiCategory.tpl.html
+++ b/client/src/app/admin/ludiCategories/admin-ludiCategory.tpl.html
@@ -22,7 +22,7 @@
                 <span class="help-block" ng-show="showError(detailForm.color, 'required')">This field is required</span>
             </div>
             <div class="form-group">
-                <img class="LCimage" ng-src="{{ludiCategory.img.location}}" alt="LudiCategory Picture" />
+                <img class="lcImage" ng-src="{{ludiCategory.img.location}}" alt="LudiCategory Picture" />
             </div>
             <div class="form-group">
                 <button type="button" class="btn btn-primary" ng-disabled="!canSave(detailForm)" ng-click="update()">Update</button>
